# prussing-batting-rust

./: Cargo.toml
src/: constants.rs  error.rs  lib.rs  main.rs  nif.rs  types.rs
src/force_models/: composite.rs  drag.rs  ephemeris.rs  gravity.rs  mod.rs  spherical_harmonics.rs  srp.rs  third_body.rs  two_body.rs
src/keplerian/: feasibility.rs  geometry.rs  gooding.rs  mod.rs  prussing.rs  velocity.rs
src/perturbed/: chebyshev.rs  ks_tpbvp.rs  mcpi.rs  mod.rs  mps_ivp.rs  selector.rs  tpbvp.rs
tests/: gooding.rs  integration.rs  precision.rs  proptest_tests.rs
tests/common/: mod.rs
